src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_brace_content.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: "{\"foo\":\"bar\"}"
  status: ~
  streaming: ~
