src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_file_mention_at_start.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 2
  content:
    - type: file-mention
      path: src/App.tsx
    - type: text
      text: " is the entry point"
  status: ~
  streaming: ~
