src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_file_mentions.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 5
  content:
    - type: text
      text: "Please review "
    - type: file-mention
      path: src/foo.ts
    - type: text
      text: " and also "
    - type: file-mention
      path: README.md
    - type: text
      text: " for issues"
  status: ~
  streaming: ~
