src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_image_path_containing_spaces.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 3
  content:
    - type: text
      text: "Clicking on "
    - type: file-mention
      path: /Users/me/Library/Application Support/CleanShot/CleanShot 2026-04-29 at 08.24.35@2x.jpg
    - type: text
      text: " queues"
  status: ~
  streaming: ~
