src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_invalid_pasted_ranges.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 3
  content:
    - type: text
      text: "before "
    - type: pasted-text
      text_length: 6
      text_preview: PASTED
    - type: text
      text: " after"
  status: ~
  streaming: ~
