src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_overlapping_file_paths.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 2
  content:
    - type: text
      text: "see "
    - type: file-mention
      path: src/foo.ts
  status: ~
  streaming: ~
